# kzero

./: .dockerignore  .env.example  .gitignore  BOOK.md  DEVNOTES.md  Dockerfile  LICENSE  README.md  app.py  build_exe.py  launcher.py  pyproject.toml  requirements.txt  space.yaml
characters/: carlin.md  feynman.md  jobs.md  johnson.md  kobe.md  musk.md  references.md  sartre.md
config/: discussion_modes.json  simulation_config.json
dialectics/: is_consciousness_an_illusion_20260402_190502.json
marketing/: blog_post.md  launch_posts.md
notebooks/: council_kaggle.ipynb
predictions/: should_humanity_pursue_biological_immort_20260402_180818.json
profiles/: council_profiles.json
reports/: should_humanity_pursue_biological_immortality_20260402_181950.qmd
runner/: __init__.py  agent.py  analyze.py  artifacts.py  council_runner.py  demiurge.py  dialectic.py  evolution.py  modes.py  overnight.py  predict.py  report.py  thread.py  validate.py  visualize.py
scenarios/: scenario_01_meaning_of_life.json  scenario_02_ai_alignment.json  scenario_03_death_and_legacy.json
transcripts/: ai_alignment_20260402_163642.json  ai_alignment_20260402_163642.md  ai_alignment_20260402_171139.json  ai_alignment_20260402_171139.md  ai_alignment_20260402_171139_analysis.json  ai_alignment_20260402_171139_thread.md  death_and_legacy_20260402_164524.json  death_and_legacy_20260402_164524.md  death_and_legacy_20260402_164524_analysis.json  death_and_legacy_20260402_164524_thread.md  kzero_persistence_demo.json  meaning_of_life_20260402_160855.json  meaning_of_life_20260402_160855.md  (+6 more)
(+42 files in other folders)
